<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitStart"
        android:onClick="goToProfilePage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteY="1dp"></ImageView>

    <Button
        android:id="@+id/goToReminders"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:onClick="goToReminders"
        android:text="YOUR REMINDERS"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOut"></Button>

    <Button
        android:id="@+id/signOut"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="4dp"
        android:onClick="signOut"
        android:text="SIGN OUT"
        android:textSize="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NotificationID"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toRightOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <fragment
        android:id="@+id/mapAPI"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </fragment>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FF0000"
        android:onClick="cancelRoute"
        android:text="Exit"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:visibility="invisible"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>